2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* gsd-media-keys-window.c: (gsd_media_keys_window_init): slightly
	increase the popup window size again (130x130 at 640x480 and scaled
	from there)

2007-11-10  Jens Granseuer  <jensgr@gmx.net>

	The media window popup has a fixed size 300x300 when running in
	composited mode. For smaller display sizes this is quite excessive.
	Change the window size to be 100x100 on 800x600 and smaller screens,
	and scale up from that for anthing bigger. (bug #495346)

	* gsd-media-keys-window.c: (initialize_alpha_mode),
	(gsd_media_keys_window_init): make composited media popup window sizes
	scale with the screen size

2007-10-26  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Iain Holmes <iain@gnome.org>

	* gsd-media-keys-window.c: (fade_timeout), (hide_timeout),
	(remove_hide_timeout), (add_hide_timeout), (on_expose_event),
	(gsd_media_keys_window_init): gradually fade out the OSD when composited
	(bug #490593)

2007-10-16  Sergey Udaltsov <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: no more "configuration changed"
	warning, http://bugzilla.gnome.org/show_bug.cgi?id=358048

2007-10-08  Sergey Udaltsov <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: dropping unneeded dbus server

2007-08-22  Sergey Udaltsov <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: initializing current_*config early,
	so callback (apply_settings) would not crash,
	http://bugzilla.gnome.org/show_bug.cgi?id=469192

2007-08-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-keyboard-xkb.c
	(gnome_settings_keyboard_xkb_analyze_sysconfig): use
	gnome_settings_delayed_show_dialog() to display the error message,
	so that it is shown when a window manager is running, thus being
	centered and with a proper frame.

2007-08-18  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c: (update_state): don't check the
	internal volume since this makes it impossible to unmute a low volume
	(that translates to an internal GStreamer volume of 0)